# colab

./: .gitignore  MANIFEST.in  PUBLISHING.md  README.md  publish.sh  pyproject.toml  server.py  setup.py  upload_with_token.sh
scripts/: README.md  pss.sh  publish.sh  quickstart.sh  test_local_install.sh
src/colab_code_executor/: cli.py  server.py  test_lro.py  test_server.py
src/jupyter_kernel_proxy/: __init__.py  cli.py  test_server.py
