[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-kernel-proxy"
version = "0.1.0"
description = "FastAPI server for remote Jupyter kernel management with code execution capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gonzalo Gasca Meza", email = "gascagonzalo@gmail.com"}
]
maintainers = [
    {name = "Gonzalo Gasca Meza", email = "gascagonzalo@gmail.com"}
]
keywords = ["jupyter", "kernel", "fastapi", "code-execution", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/codeexec/colab"
Repository = "https://github.com/codeexec/colab"
Issues = "https://github.com/codeexec/colab/issues"

[project.scripts]
jupyter-kernel-proxy = "jupyter_kernel_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jupyter_kernel_proxy*"]

[tool.setuptools.package-data]
jupyter_kernel_proxy = ["py.typed"]
